tests/__snapshots__/validation-reporters-path-does-not-exist-stderr.snap.txt
Error: The specified module 'not-reporter' was not found.

  2 |   "reporters": [
  3 |     "./tstyche-reporter.js",
  4 |     "not-reporter",
    |     ~~~~~~~~~~~~~~
  5 |     "./not-reporter.js"
  6 |   ],
  7 |   "testFileMatch": [

      at ./tstyche.config.json:4:5

Error: The specified module '<<baseUrl>>/tests/__fixtures__/.generated/validation-reporters/not-reporter.js' was not found.

  3 |     "./tstyche-reporter.js",
  4 |     "not-reporter",
  5 |     "./not-reporter.js"
    |     ~~~~~~~~~~~~~~~~~~~
  6 |   ],
  7 |   "testFileMatch": [
  8 |     "examples/*.tst.*"

      at ./tstyche.config.json:5:5

